# CMake_Lesson7_Ex2

./: CMakeLists.txt
Lesson7_Ex2/: CMakeLists.txt
Lesson7_Ex2/include/: ram.h
Lesson7_Ex2/src/: Lesson7_Ex2.cpp  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  ram.cpp
